crates/aihu-css-core/tests/snapshots/scoped_snapshot__scoped_transition_and_transform.snap
---
source: crates/aihu-css-core/tests/scoped_snapshot.rs
assertion_line: 76
expression: "compile_sfc_scoped(&sfc(\"transition-transform duration-300 hover:scale-105\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
.duration-300 { transition-duration: 300ms; }
.hover\:scale-105:hover { transform: scale(1.05); }
.transition-transform { transition-property: transform; transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); transition-duration: 150ms; }
