crates/aihu-css-core/tests/snapshots/scoped_snapshot__scoped_with_authored_style_block.snap
---
source: crates/aihu-css-core/tests/scoped_snapshot.rs
assertion_line: 38
expression: compile_sfc_scoped(&ast(json)).unwrap()
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
.p-4 { padding: 1rem; }
.shadow-md { box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1); }
/* authored @style (scoped) */
.inner {
  display: grid;
  gap: 1rem;
}
