crates/aihu-css-core/tests/snapshots/scoped_snapshot__scoped_with_global_style_block.snap
---
source: crates/aihu-css-core/tests/scoped_snapshot.rs
assertion_line: 46
expression: compile_sfc_scoped(&ast(json)).unwrap()
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
/* authored @style ($global — unscoped) */
body {
  margin: 0;
}
