crates/aihu-css-core/tests/snapshots/scoped_snapshot__theme_default_vs_override.snap
---
source: crates/aihu-css-core/tests/scoped_snapshot.rs
assertion_line: 142
expression: "format!(\"--- default ---\\n{default}\\n--- override ---\\n{overridden}\")"
---
--- default ---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
:host {
  --color-primary: #1a1d24;
}
*, ::before, ::after { border-style: solid; border-width: 0; }
.bg-primary { background-color: var(--color-primary); }

--- override ---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
:host {
  --color-primary: oklch(0.55 0.18 28);
}
*, ::before, ::after { border-style: solid; border-width: 0; }
.bg-primary { background-color: var(--color-primary); }
